@@ -7,6 +7,7 @@ import com.sba301.code.be.dto.response.CustomerDetailResponse;
 import com.sba301.code.be.dto.response.CustomerListResponse;
 import com.sba301.code.be.dto.response.OrderResponse;
 import com.sba301.code.be.model.entity.Account;
+import com.sba301.code.be.model.entity.Role;
 import com.sba301.code.be.service.AccountService;
 import com.sba301.code.be.service.OrderService;
 import com.sba301.code.be.repository.OrderRepository;
@@ -18,8 +19,8 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import jakarta.validation.Valid;
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/api/admin/customers", produces = "application/json")
@@ -34,28 +35,13 @@ public class AdminCustomerController {
     @GetMapping
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<ApiResponse<List<CustomerListResponse>>> listCustomers() {
-        List<Account> accounts = accountService.getAllAccounts();
-        List<CustomerListResponse> responses = accounts.stream().map(a -> {
-            int ordersCount = orderRepository.findByAccount_AccountId(a.getAccountId()).size();
-            java.math.BigDecimal total = orderRepository.findByAccount_AccountId(a.getAccountId()).stream()
-                    .map(o -> o.getTotalAmount() == null ? java.math.BigDecimal.ZERO : o.getTotalAmount())
-                    .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
-            CustomerListResponse r = new CustomerListResponse();
-            r.setAccountId(a.getAccountId());
-            r.setFullName(a.getFullName());
-            r.setEmail(a.getEmail());
-            r.setPhoneNumber(a.getPhoneNumber());
-            r.setAddress(a.getAddress());
-            r.setOrdersCount(ordersCount);
-            r.setTotalSpent(total);
-            r.setJoinDate(null);
-            r.setStatus("Active");
-            return r;
-        }).collect(Collectors.toList());
+        List<AccountResponse> accounts = accountService.getAllAccounts();
+        List<CustomerListResponse> responses = accounts.stream()
+                .map(this::toCustomerListResponse)
+                .toList();
         return ResponseEntity.ok(ApiResponse.success(responses, "Customers retrieved"));
     }
 
-    // New: return orders for a given customer (admin)
     @GetMapping(value = "/{id}/orders", produces = "application/json")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<ApiResponse<List<OrderResponse>>> getCustomerOrders(@PathVariable("id") Long id) {
@@ -66,27 +52,8 @@ public class AdminCustomerController {
     @GetMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<ApiResponse<CustomerDetailResponse>> getCustomer(@PathVariable Long id) {
-        Account acc = accountService.getAccountById(id);
-        // compute orders and totals
-        List<com.sba301.code.be.model.entity.Order> orders = orderRepository.findByAccount_AccountId(acc.getAccountId());
-        List<Long> orderIds = orders.stream().map(o -> o.getOrderId()).toList();
-        int ordersCount = orderIds.size();
-        java.math.BigDecimal total = orders.stream()
-                .map(o -> o.getTotalAmount() == null ? java.math.BigDecimal.ZERO : o.getTotalAmount())
-                .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
-
-        CustomerDetailResponse detail = new CustomerDetailResponse();
-        detail.setAccountId(acc.getAccountId());
-        detail.setFullName(acc.getFullName());
-        detail.setEmail(acc.getEmail());
-        detail.setPhoneNumber(acc.getPhoneNumber());
-        detail.setAddress(acc.getAddress());
-        detail.setOrderIds(orderIds);
-        detail.setOrdersCount(ordersCount);
-        detail.setTotalSpent(total);
-        detail.setJoinDate(null);
-        detail.setStatus("Active");
-
+        AccountResponse acc = accountService.getAccountById(id);
+        CustomerDetailResponse detail = toCustomerDetailResponse(acc);
         return ResponseEntity.ok(ApiResponse.success(detail, "Customer retrieved"));
     }
 
@@ -99,19 +66,18 @@ public class AdminCustomerController {
         account.setPhoneNumber(request.getPhoneNumber());
         account.setAddress(request.getAddress());
         account.setPassword(request.getPassword());
-
-        // allow admin to set role to CUSTOMER explicitly, otherwise default will be set in service
         roleRepository.findByRoleName("CUSTOMER").ifPresent(account::setRole);
 
-        Account created = accountService.createAccount(account);
+        AccountResponse created = accountService.createAccount(account);
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body(ApiResponse.success(toResponse(created), "Customer created"));
+                .body(ApiResponse.success(created, "Customer created"));
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<ApiResponse<AccountResponse>> updateCustomer(@PathVariable Long id,
-                                                                       @Valid @RequestBody RegisterDto request) {
+    public ResponseEntity<ApiResponse<AccountResponse>> updateCustomer(
+            @PathVariable Long id,
+            @Valid @RequestBody RegisterDto request) {
         Account account = new Account();
         account.setFullName(request.getFullName());
         account.setEmail(request.getEmail());
@@ -119,8 +85,8 @@ public class AdminCustomerController {
         account.setAddress(request.getAddress());
         account.setPassword(request.getPassword());
 
-        Account updated = accountService.updateAccount(id, account);
-        return ResponseEntity.ok(ApiResponse.success(toResponse(updated), "Customer updated"));
+        AccountResponse updated = accountService.updateAccount(id, account);
+        return ResponseEntity.ok(ApiResponse.success(updated, "Customer updated"));
     }
 
     @DeleteMapping("/{id}")
@@ -133,32 +99,53 @@ public class AdminCustomerController {
     @GetMapping("/search")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<ApiResponse<List<CustomerListResponse>>> searchCustomers(@RequestParam("q") String q) {
-        List<Account> matches = accountService.searchAccounts(q);
-        List<CustomerListResponse> responses = matches.stream().map(a -> {
-            int ordersCount = orderRepository.findByAccount_AccountId(a.getAccountId()).size();
-            java.math.BigDecimal total = orderRepository.findByAccount_AccountId(a.getAccountId()).stream()
-                    .map(o -> o.getTotalAmount() == null ? java.math.BigDecimal.ZERO : o.getTotalAmount())
-                    .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
-            CustomerListResponse r = new CustomerListResponse();
-            r.setAccountId(a.getAccountId());
-            r.setFullName(a.getFullName());
-            r.setEmail(a.getEmail());
-            r.setPhoneNumber(a.getPhoneNumber());
-            r.setAddress(a.getAddress());
-            r.setOrdersCount(ordersCount);
-            r.setTotalSpent(total);
-            r.setJoinDate(null);
-            r.setStatus("Active");
-            return r;
-        }).collect(Collectors.toList());
+        List<AccountResponse> matches = accountService.searchAccounts(q);
+        List<CustomerListResponse> responses = matches.stream()
+                .map(this::toCustomerListResponse)
+                .toList();
         return ResponseEntity.ok(ApiResponse.success(responses, "Search results"));
     }
 
-    private AccountResponse toResponse(Account a) {
-        AccountResponse r = new AccountResponse();
-        r.setAccountName(a.getFullName());
+    // --- Helpers ---
+
+    private CustomerListResponse toCustomerListResponse(AccountResponse a) {
+        int ordersCount = a.getOrders() != null ? a.getOrders().size() : 0;
+        BigDecimal total = a.getOrders() == null ? BigDecimal.ZERO : a.getOrders().stream()
+                .map(o -> o.getTotalAmount() == null ? BigDecimal.ZERO : o.getTotalAmount())
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        CustomerListResponse r = new CustomerListResponse();
+        r.setAccountId(a.getId());
+        r.setFullName(a.getFullName());
         r.setEmail(a.getEmail());
-        r.setPassword(a.getPassword());
+        r.setPhoneNumber(a.getPhoneNumber());
+        r.setAddress(a.getAddress());
+        r.setOrdersCount(ordersCount);
+        r.setTotalSpent(total);
+        r.setJoinDate(null);
+        r.setStatus("Active");
         return r;
+    }
+
+    private CustomerDetailResponse toCustomerDetailResponse(AccountResponse a) {
+        List<Long> orderIds = a.getOrders() == null ? List.of() :
+                a.getOrders().stream().map(OrderResponse::getOrderId).toList();
+        int ordersCount = orderIds.size();
+        BigDecimal total = a.getOrders() == null ? BigDecimal.ZERO : a.getOrders().stream()
+                .map(o -> o.getTotalAmount() == null ? BigDecimal.ZERO : o.getTotalAmount())
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        CustomerDetailResponse detail = new CustomerDetailResponse();
+        detail.setAccountId(a.getId());
+        detail.setFullName(a.getFullName());
+        detail.setEmail(a.getEmail());
+        detail.setPhoneNumber(a.getPhoneNumber());
+        detail.setAddress(a.getAddress());
+        detail.setOrderIds(orderIds);
+        detail.setOrdersCount(ordersCount);
+        detail.setTotalSpent(total);
+        detail.setJoinDate(null);
+        detail.setStatus("Active");
+        return detail;
     }
 }
